# calculator-rust

./: .gitignore  Cargo.toml  build.rs
data/: calculator.pest
docs/: cli-design.md  syntax_of_latex.md
src/: ast.rs  calculator.lalrpop  calculator.rs  cli.rs  interactive.rs  main.rs  parser.lalrpop
src/test/: expr.rs  factor.rs  level1.rs  lexer.rs  utils.rs
src/test/calculator/: unit.rs
src/utils/: error.rs  file.rs  io.rs
test/: add.calc  ln.calc
