[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# if you want to use this crate
# you must import it in the same way as below
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
statrs = "0.16.0"


[build-dependencies]
lalrpop = "0.20.0"
